--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
